Working on course sections

--- a/clientviews/admin/section.page.tmpl
+++ b/clientviews/admin/section.page.tmpl
@@ -108,10 +108,75 @@
                             </div>
 
                         </div>
+
+                        <div class="col-md-6 col-xs-12">
+
+                            <div class="form-group mt-3">
+                                <label for="prof_name">Professor's Name</label>
+                                {{with .Form.Errors.Get "prof_name"}}
+                                    <label class='text-danger'>{{.}}</label>
+                                {{end}}
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-user fa-fw"></i></span>
+                                    </div>
+                                    <input class="form-control required {{with .Form.Errors.Get "prof_name"}} is-invalid {{end}}"
+                                           id="prof_name"
+                                           required
+                                           autocomplete="off" type='text'
+                                           name='prof_name'
+                                           value='{{$s.ProfName}}'>
+                                    <div class="invalid-feedback">
+                                        Please enter a value
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="course_name">Professor's Email</label>
+                                {{with .Form.Errors.Get "prof_email"}}
+                                    <label class='text-danger'>{{.}}</label>
+                                {{end}}
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-envelope fa-fw"></i></span>
+                                    </div>
+                                    <input class="form-control required {{with .Form.Errors.Get "prof_email"}} is-invalid {{end}}"
+                                           id="prof_email"
+                                           required
+                                           autocomplete="off" type='email'
+                                           name='prof_email'
+                                           value='{{$s.ProfEmail}}'>
+                                    <div class="invalid-feedback">
+                                        Please enter a valid email address
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group mt-3">
+                                <label for="teams_link">MS Teams Link</label>
+                                {{with .Form.Errors.Get "prof_name"}}
+                                    <label class='text-danger'>{{.}}</label>
+                                {{end}}
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-link fa-fw"></i></span>
+                                    </div>
+                                    <input class="form-control required {{with .Form.Errors.Get "teams_link"}} is-invalid {{end}}"
+                                           id="teams_link"
+                                           autocomplete="off" type='text'
+                                           name='teams_link'
+                                           value='{{$s.TeamsLink}}'>
+                                    <div class="invalid-feedback">
+                                        Please enter a value
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-6 col-xs-12">
+                        <div class="col-md-12 col-xs-12">
                             <hr>
                             <input type="submit" class="btn btn-primary" value="Save">
 
