--- a/clientviews/admin/section.page.tmpl
+++ b/clientviews/admin/section.page.tmpl
@@ -153,7 +153,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group mt-3">
+                            <div class="form-group">
                                 <label for="teams_link">MS Teams Link</label>
                                 {{with .Form.Errors.Get "prof_name"}}
                                     <label class='text-danger'>{{.}}</label>
@@ -170,6 +170,13 @@
                                     <div class="invalid-feedback">
                                         Please enter a value
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Accesses</label>
+                                <div class="input-group">
+                                <a class="btn btn-outline-secondary" href="/admin/sections/{{$s.ID}}/accesses">View Student Access History</a>
                                 </div>
                             </div>
                         </div>
