Working on sections

--- a/clientviews/admin/member.page.tmpl
+++ b/clientviews/admin/member.page.tmpl
@@ -218,7 +218,7 @@
                             {{$access := index .RowSets "access"}}
                             {{range $access}}
                                 <tr>
-                                    <td>{{.Course.CourseName}}</td>
+                                    <td>{{.Section.SectionName}}: {{.Course.CourseName}} {{.Section.Term}}</td>
                                     <td>{{.Lecture.LectureName}}</td>
                                     <td>{{humanDateTime .CreatedAt}}</td>
                                     <td>{{secondsHuman .Duration}}</td>
