--- a/clientviews/admin/member.page.tmpl
+++ b/clientviews/admin/member.page.tmpl
@@ -7,7 +7,7 @@
 
 {{define "content"}}
 
-    {{if and (hasRole "super" .Auth.ID) (ne .Auth.ID .AdminUser.ID)}}
+    {{if and (hasRole "super" .Auth.ID) (ne .Auth.ID .AdminUser.ID) (gt .AdminUser.ID 0)}}
         <div class="row">
             <div class="col">
                 <div class="float-right">
@@ -27,29 +27,32 @@
                         Information</a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" id="assignment-tab" href="#assignments-tab-content" data-toggle="tab">Assignments</a>
-                </li>
+                {{if gt .AdminUser.ID 0}}
 
-                <li class="nav-item">
-                    <a class="nav-link" id="activity-tab" href="#access-tab-content" data-toggle="tab">Course
-                        Activity</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="assignment-tab" href="#assignments-tab-content" data-toggle="tab">Assignments</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" id="chart-tab" data-toggle="tab" href="#chart-tab-content" role="tab"
-                       aria-controls="Logo" aria-selected="false">Progress</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="activity-tab" href="#access-tab-content" data-toggle="tab">Course
+                            Activity</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" id="chart-tab" data-toggle="tab" href="#chart-tab-content" role="tab">Progress</a>
+                    </li>
+
+                {{end}}
             </ul>
 
             <div class="tab-content" id="userTabsContent">
+
                 <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="general-tab"
                      id="user-tab-content">
 
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 class="mt-3">User Information</h3>
-                            <hr>
+
                             <form method="post" action="/admin/members/edit-member" id="userForm"
                                   class="needs-validation" novalidate>
                                 <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
@@ -60,7 +63,7 @@
                                     <div class="alert alert-danger" role="alert">{{.}}</div>
                                 {{end}}
 
-                                <div class="form-group">
+                                <div class="form-group mt-3">
                                     <label>First Name:</label>
                                     {{with .Form.Errors.Get "first_name"}}
                                         <label class='text-danger'>{{.}}</label>
@@ -201,109 +204,116 @@
 
                 </div>
 
-                <div class="tab-pane fade show" role="tabpanel" aria-labelledby="general-tab"
-                     id="access-tab-content">
-                    <h3 class="mt-3 mb-2">Access History</h3>
-                    <div class="table-responsive">
-                        <table id="itable" class="table table-striped table-bordered">
-                            <thead>
-                            <tr>
-                                <th>Course</th>
-                                <th>Lecture</th>
-                                <th>Date/Time</th>
-                                <th>Duration</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {{$access := index .RowSets "access"}}
-                            {{range $access}}
-                                <tr>
-                                    <td>{{.Section.SectionName}}: {{.Course.CourseName}} {{.Section.Term}}</td>
-                                    <td>{{.Lecture.LectureName}}</td>
-                                    <td>{{humanDateTime .CreatedAt}}</td>
-                                    <td>{{secondsHuman .Duration}}</td>
-                                </tr>
-                            {{end}}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+                {{if gt .AdminUser.ID 0}}
+                    <div class="tab-pane fade show" role="tabpanel" aria-labelledby="activity-tab"
+                         id="access-tab-content">
 
-                <div class="tab-pane fade show" role="tabpanel" aria-labelledby="general-tab"
-                     id="assignments-tab-content">
-                    <h3 class="mt-3 mb-2">Assignments</h3>
-                    <div class="table-responsive">
-                        <table id="atable" class="table table-striped table-bordered">
-                            <thead>
-                            <tr>
-                                <th>Description</th>
-                                <th>Name</th>
-                                <th>Course</th>
-                                <th>Date Received</th>
-                                <th class="text-center">Processed</th>
-                                <th class="text-center">Grade</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {{$assignments := index .RowSets "assignments"}}
-                            {{$studentID := .AdminUser.ID}}
-                            {{range $assignments}}
+                        <div class="table-responsive mt-3">
+                            <table id="itable" class="table table-striped table-bordered">
+                                <thead>
                                 <tr>
-                                    <td>
-                                        <a href='/admin/courses/assignment/{{.ID}}?src={{$studentID}}'>{{.Description}}</a>
-                                    </td>
-                                    <td>{{.User.FirstName}} {{.User.LastName}}</td>
-                                    <td>{{.Course.CourseName}}</td>
-                                    <td>{{humanDateTime .CreatedAt}}</td>
-                                    <td class="text-center">
-                                        <a href='/admin/courses/assignment/{{.ID}}'>
-                                            {{if eq .Processed 1}}
-                                                <span class="badge badge-primary">Processed</span>
+                                    <th>Course</th>
+                                    <th>Lecture</th>
+                                    <th>Date/Time</th>
+                                    <th>Duration</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {{$access := index .RowSets "access"}}
+                                {{range $access}}
+                                    <tr>
+                                        <td>{{.Section.SectionName}}: {{.Course.CourseName}} {{.Section.Term}}</td>
+                                        <td>{{.Lecture.LectureName}}</td>
+                                        <td>{{humanDateTime .CreatedAt}}</td>
+                                        <td>{{secondsHuman .Duration}}</td>
+                                    </tr>
+                                {{end}}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade show" role="tabpanel" aria-labelledby="assignment-tab"
+                         id="assignments-tab-content">
+
+                        <div class="table-responsive mt-3">
+                            <table id="atable" class="table table-striped table-bordered">
+                                <thead>
+                                <tr>
+                                    <th>Description</th>
+                                    <th>Name</th>
+                                    <th>Course</th>
+                                    <th>Date Received</th>
+                                    <th class="text-center">Processed</th>
+                                    <th class="text-center">Grade</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {{$assignments := index .RowSets "assignments"}}
+                                {{$studentID := .AdminUser.ID}}
+                                {{range $assignments}}
+                                    <tr>
+                                        <td>
+                                            <a href='/admin/courses/assignment/{{.ID}}?src={{$studentID}}'>{{.Description}}</a>
+                                        </td>
+                                        <td>{{.User.FirstName}} {{.User.LastName}}</td>
+                                        <td>{{.Course.CourseName}}</td>
+                                        <td>{{humanDateTime .CreatedAt}}</td>
+                                        <td class="text-center">
+                                            <a href='/admin/courses/assignment/{{.ID}}'>
+                                                {{if eq .Processed 1}}
+                                                    <span class="badge badge-primary">Processed</span>
+                                                {{else}}
+                                                    <span class="badge badge-danger">Not Processed</span>
+                                                {{end}}
+                                            </a>
+                                        </td>
+                                        <td class="text-center">
+                                            {{if gt .TotalValue 0}}
+                                                {{.Mark}}/{{.TotalValue}}
                                             {{else}}
-                                                <span class="badge badge-danger">Not Processed</span>
+                                                N/A
                                             {{end}}
-                                        </a>
-                                    </td>
-                                    <td class="text-center">
-                                        {{if gt .TotalValue 0}}
-                                            {{.Mark}}/{{.TotalValue}}
-                                        {{else}}
-                                            N/A
-                                        {{end}}
-                                    </td>
-                                </tr>
-                            {{end}}
-                            </tbody>
-                        </table>
+                                        </td>
+                                    </tr>
+                                {{end}}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
-                </div>
 
-                <div class="tab-pane fade" role="tabpanel" aria-labelledby="chart-tab" id="chart-tab-content">
-                    <h3 class="mt-4">My Progress</h3>
+                    <div class="tab-pane fade" role="tabpanel" aria-labelledby="chart-tab" id="chart-tab-content">
 
-                    <div class="row">
-                        <div class="offset-3 col-md-6">
-                            <div class="form-group ">
-                                <label for="course_id">Course</label>
-                                <select id="course_id" name="active" class="custom-select" onchange="showCourseData()">
-                                    {{range (index .RowSets "courses")}}
-                                        <option value="{{.ID}}">{{.SectionName}}: {{.Course.CourseName}} - {{.Term}}</option>
-                                    {{end}}
-                                </select>
+
+                        {{if gt (len (index .RowSets "courses")) 0}}
+                            <div class="row">
+                                <div class="offset-3 col-md-6 mt-3">
+                                    <div class="form-group ">
+                                        <label for="course_id">Course</label>
+                                        <select id="course_id" name="active" class="custom-select"
+                                                onchange="showCourseData()">
+                                            {{range (index .RowSets "courses")}}
+                                                <option value="{{.ID}}">{{.SectionName}}: {{.Course.CourseName}}
+                                                    - {{.Term}}</option>
+                                            {{end}}
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-xs-12">
-                            <canvas id="viewsChart"></canvas>
-                        </div>
-                        <div class="col-md-6 col-xs-12">
-                            <canvas id="durationChart"></canvas>
-                            <div id="chartjs-tooltip"></div>
-                        </div>
-                    </div>
+                            <div class="row">
+                                <div class="col-md-6 col-xs-12">
+                                    <canvas id="viewsChart"></canvas>
+                                </div>
+                                <div class="col-md-6 col-xs-12">
+                                    <canvas id="durationChart"></canvas>
+                                    <div id="chartjs-tooltip"></div>
+                                </div>
+                            </div>
+                        {{end}}
 
-                </div>
+                    </div>
+                {{end}}
+
             </div>
         </div>
     </div>
@@ -470,7 +480,7 @@
 
                     var ctx = document.getElementById("viewsChart").getContext('2d');
 
-                    viewChart= new Chart(ctx, {
+                    viewChart = new Chart(ctx, {
                         type: 'horizontalBar',
                         data: chartdata,
                         options: {
