--- a/clientviews/admin/profile.page.tmpl
+++ b/clientviews/admin/profile.page.tmpl
@@ -292,10 +292,12 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 col-xs-12">
+                        <div class="col-md-12 col-xs-12">
                             <canvas id="viewsChart"></canvas>
                         </div>
-                        <div class="col-md-6 col-xs-12">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 col-xs-12">
                             <canvas id="durationChart"></canvas>
                             <div id="chartjs-tooltip"></div>
                         </div>
