--- a/clientviews/admin/course-traffic.page.tmpl
+++ b/clientviews/admin/course-traffic.page.tmpl
@@ -15,17 +15,20 @@
                 <label for="course_id">Course</label>
                 <select id="course_id" name="active" class="custom-select" onchange="showCourseData()">
                     {{range (index .RowSets "courses")}}
-                        <option value="{{.ID}}" {{if eq .ID $courseID}} selected {{end}}>{{.SectionName}}: {{.Course.CourseName}} - {{.Term}}</option>
+                        <option value="{{.ID}}" {{if eq .ID $courseID}} selected {{end}}>{{.SectionName}}
+                            : {{.Course.CourseName}} - {{.Term}}</option>
                     {{end}}
                 </select>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 col-xs-12">
+        <div class="col-md-12 col-xs-12">
             <canvas id="viewsChart"></canvas>
         </div>
-        <div class="col-md-6 col-xs-12">
+    </div>
+    <div class="row">
+        <div class="col-md-12 col-xs-12">
             <canvas id="durationChart"></canvas>
             <div id="chartjs-tooltip"></div>
         </div>
@@ -68,7 +71,7 @@
 
                     var ctx = document.getElementById("viewsChart").getContext('2d');
 
-                    viewChart= new Chart(ctx, {
+                    viewChart = new Chart(ctx, {
                         type: 'horizontalBar',
                         data: chartdata,
                         options: {
