--- a/clientviews/admin/assignment-admin.page.tmpl
+++ b/clientviews/admin/assignment-admin.page.tmpl
@@ -13,17 +13,17 @@
 
     <form method="post" action="/admin/sections/assignment/{{$a.ID}}" novalidate
           class="needs-validation"
-          id="a-form">
+          id="a-form"
+          enctype="multipart/form-data">
 
         <input type="hidden" name="csrf_token" id="csrf_token" value="{{.CSRFToken}}">
         <input type="hidden" name="user_id" id="user_id" value="{{$a.UserID}}">
 
 
         <h3><a href="/admin/members/{{$a.User.ID}}">{{$a.User.FirstName}} {{$a.User.LastName}}</a></h3>
-        <h4>{{$a.Course.CourseName}} - {{$a.Description}}</h4>
-        <p>Received: {{humanDateTime $a.CreatedAt}}</p>
-
-        <p>Download: <a href="/static/site-content/assignments/{{$a.UserID}}/{{$a.FileName}}">{{$a.FileNameDisplay}}</a>
+        <p>{{$a.Course.CourseName}} - {{$a.Description}}</p>
+        <p><strong>Received</strong>: {{humanDateTime $a.CreatedAt}}<br>
+        <strong>Download</strong>: <a href="/static/site-content/assignments/{{$a.UserID}}/{{$a.FileName}}">{{$a.FileNameDisplay}}</a>
         </p>
 
         <div class="form-row">
@@ -68,6 +68,15 @@
                     </div>
                 </div>
             </div>
+
+            <div class="form-group col-md-6">
+                <label>Upload marked file</label>
+                <div class="custom-file">
+                    <input type="file" name="graded" class="custom-file-input" id="customFile" accept="application/pdf">
+                    <label class="custom-file-label" for="customFile">Choose file</label>
+                </div>
+            </div>
+
         </div>
         <hr>
         <input type="submit" class="btn btn-primary" value="Save">
@@ -83,8 +92,24 @@
 
 {{define "js"}}
     <script>
-        $(document).ready(function () {
-
+        document.addEventListener("DOMContentLoaded", function (event) {
+            bsCustomFileInput.init();
         });
+
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                var forms = document.getElementsByClassName('needs-validation');
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
     </script>
 {{end}}
