--- a/clientviews/admin/profile.page.tmpl
+++ b/clientviews/admin/profile.page.tmpl
@@ -240,7 +240,9 @@
                                 </td>
                                 <td class="text-center">
                                     {{if ne .GradedFile ""}}
-                                        <a href="/admin/sections/assignments/download-graded-for-student/{{.ID}}"><i class="fa fa-download"></i></a>
+                                        <a href="/admin/sections/assignments/download-graded-for-student/{{.ID}}">
+                                            <i class="fa fa-download"></i>
+                                        </a>
                                     {{else}}
                                         N/A
                                     {{end}}
