--- a/clientviews/admin/assignment-admin.page.tmpl
+++ b/clientviews/admin/assignment-admin.page.tmpl
@@ -77,6 +77,13 @@
                 </div>
             </div>
 
+            {{if ne $a.GradedFile ""}}
+            <div class="form-group col-md-6">
+                <label>Graded Assignment</label><br>
+                <a href="/admin/sections/assignments/download-graded/{{$a.UserID}}/{{$a.ID}}" class="btn btn-outline-secondary"><i class="fa fa-download"></i> Download File</a>
+            </div>
+            {{end}}
+
         </div>
         <hr>
         <input type="submit" class="btn btn-primary" value="Save">
