--- a/clientviews/admin/profile.page.tmpl
+++ b/clientviews/admin/profile.page.tmpl
@@ -245,7 +245,7 @@
                                             <i class="fa fa-download"></i>
                                         </a>
                                     {{else}}
-                                        N/A
+                                        <span class="badge">N/A</span>
                                     {{end}}
                                 </td>
                             </tr>
